# dashboards

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  pyproject.toml
backend/app/: auth.py  builder.py  deps.py  main.py  schemas.py  vitrine_map.py
db/: Dockerfile
db/migrations/: 0001_schema.sql  0002_vitrines_views.sql  0003_rls_policies.sql  0004_pg_cron_jobs.sql
openapi/: reporting-v1.yaml
web/: .dockeringnore  Dockerfile  Dockerfile.dev  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx
web/components/: AlertCenter.tsx  BacklogAnalysis.tsx  DeptView.tsx  ExecView.tsx  FilterBar.tsx  ForecastLoadIndicator.tsx  ForecastView.tsx  HintTooltip.tsx  HiringJustification.tsx  LoadingOverlay.tsx  NormComplianceBadge.tsx  PersonView.tsx  ProjectDetailView.tsx  SettersResourceDashboard.tsx  SettersResourceDashboardMock.tsx  WhatIfPanel.tsx  ui.tsx
web/hooks/: useAlerts.ts  useDashboardData.ts  useData.ts  useFilters.ts  useMockData.ts  useProductionCalendar.ts  useSupabaseData.ts  useWhatIfData.ts
web/lib/: alertConstants.ts  alertStorage.ts  alertTypes.ts  alertUtils.ts  alerts.ts  authUtils.ts  cache.ts  calc.ts  dashboardMetrics.ts  dataModel.ts  date.ts  hints.ts  logger.ts  pieCalculations.ts  quality.ts  redis.ts  seededRandom.ts  weeklyCalculations.tsx  whatIfTypes.ts  whatIfUtils.ts  xlsxExport.ts
web/tests/: formulas.test.ts
web/types/: database.ts
web/utils/: calculateWorkingDays.ts
(+55 files in other folders)
